@@ -108,6 +108,7 @@ vfs-methods/fontilus/font-view.c
 vfs-methods/fontilus/fontilus-context-menu.c
 vfs-methods/fontilus/fontilus.schemas.in
 vfs-methods/fontilus/fontilus.server.in.in
+vfs-methods/fontilus/gnome-font-viewer.desktop.in
 vfs-methods/themus/Themus_Properties_View.server.in.in
 vfs-methods/themus/apply-font.glade
 vfs-methods/themus/theme-method.c
