@@ -13,3 +13,4 @@ font-method.directory
 fontilus.schemas
 fontilus.server
 fontilus.server.in
+gnome-font-viewer.desktop
